Refactor to GameActivity
Signed-off-by: OroshiX <oroshix@users.noreply.github.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:weightSum="5"
-              tools:context="com.nimoroshix.pentatonic.MainActivity">
+              tools:context="com.nimoroshix.pentatonic.GameActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
