--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#03a9f4</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#4db6ac</color>
+    <color name="colorPrimaryDark">#006064</color>
+    <color name="colorAccent">#d50000</color>
     <color name="bar_text_color">#fff3e0</color>
 </resources>
