--- a/app/src/main/res/layout/item_pentatonic.xml
+++ b/app/src/main/res/layout/item_pentatonic.xml
@@ -3,8 +3,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_id"
+    <Button
+        android:id="@+id/btn_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </RelativeLayout>
