--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -20,4 +20,8 @@
         android:id="@+id/menu_replace"
         android:title="@string/replace"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_remove"
+        android:title="@string/menu_remove_letter"
+        app:showAsAction="never"/>
 </menu>
