--- a/app/src/main/res/layout/item_pentatonic.xml
+++ b/app/src/main/res/layout/item_pentatonic.xml
@@ -1,10 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btn_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <android.support.v7.widget.CardView
+        android:id="@+id/card"
+        android:layout_width="@dimen/card_choose_penta_width"
+        android:layout_height="@dimen/card_choose_penta_height"
+        android:layout_margin="4dp"
+        android:clickable="true"
+        android:elevation="100dp"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardBackgroundColor="@color/cardview_light_background"
+        app:cardCornerRadius="8dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="4dp">
+
+            <TextView
+                android:id="@+id/tvTitleCard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/default_title"/>
+
+            <com.nimoroshix.pentatonic.view.PentatonicView
+                android:id="@+id/pentaViewCard"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/tvTitleCard"/>
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
 </RelativeLayout>
