--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="bar_height">34dp</dimen>
     <dimen name="bar_text_size">14dp</dimen>
+    <dimen name="card_choose_penta_height">250dp</dimen>
+    <dimen name="card_choose_penta_width">150dp</dimen>
 </resources>
