--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:weightSum="5"
-              tools:context="com.nimoroshix.pentatonic.GameActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:keepScreenOn="true"
+    android:orientation="vertical"
+    android:weightSum="5"
+    tools:context="com.nimoroshix.pentatonic.GameActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -16,13 +17,13 @@
             android:id="@+id/pentatonicEnonce"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layerType="software"/>
+            android:layerType="software" />
 
         <com.nimoroshix.pentatonic.view.PentatonicFillView
             android:id="@+id/pentatonicValues"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layerType="software"/>
+            android:layerType="software" />
     </FrameLayout>
 
     <ScrollView
