--- a/app/src/main/res/layout/remove_dialog_layout.xml
+++ b/app/src/main/res/layout/remove_dialog_layout.xml
@@ -1,15 +1,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/dialog_remove_message"/>
+        android:text="@string/dialog_remove_message" />
 
     <Spinner
         android:id="@+id/sp_value"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:minHeight="35dp"
+        android:minWidth="100dp"
+        tools:listitem="@android:layout/simple_list_item_1" />
 </LinearLayout>
