--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     tools:context="com.nimoroshix.pentatonic.GameActivity">
 
     <FrameLayout
+        android:id="@+id/framePentatonic"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3">
