logo autofit textView test

--- a/Android-app/app/src/main/res/layout/activity_menu.xml
+++ b/Android-app/app/src/main/res/layout/activity_menu.xml
@@ -29,6 +29,10 @@
         android:onClick="onAbout"
         android:text="@string/about"/>
 
+    <include
+        layout="@layout/logo"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
     <com.nimoroshix.pentatonic.view.LogoView
         android:layout_width="300dp"
         android:layout_height="wrap_content"/>
