--- a/Android-app/app/src/main/res/layout/activity_main.xml
+++ b/Android-app/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     <FrameLayout
         android:id="@+id/framePentatonic"
         android:layout_width="match_parent"
+        android:background="@drawable/beige_paper"
         android:layout_height="0dp"
         android:layout_weight="3">
 
