--- a/Android-app/app/src/main/res/values/dimens.xml
+++ b/Android-app/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="bar_text_size">14dp</dimen>
     <dimen name="card_choose_penta_height">250dp</dimen>
     <dimen name="card_choose_penta_width">150dp</dimen>
+    <dimen name="logo_padding">10dp</dimen>
 </resources>
