--- a/Android-app/app/src/main/res/values/attrs.xml
+++ b/Android-app/app/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="AutoFitText">
+    <declare-styleable name="PentatonicView">
         <attr name="customFont" format="string" />
     </declare-styleable>
 </resources>
