--- a/Android-app/app/src/main/res/layout/item_pentatonic.xml
+++ b/Android-app/app/src/main/res/layout/item_pentatonic.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/pentaViewCard"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layerType="software"
                 android:layout_below="@id/tvTitleCard"/>
 
         </RelativeLayout>
