--- a/IOS/Pentatonic/Base.lproj/Main.storyboard
+++ b/IOS/Pentatonic/Base.lproj/Main.storyboard
@@ -42,6 +42,9 @@
                                                 </connections>
                                             </button>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="Bf5-1Q-g6o" firstAttribute="centerX" secondItem="hgc-fH-IfV" secondAttribute="centerX" id="gwZ-cM-AOs"/>
+                                        </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4GZ-Uo-0V5" userLabel="Tuto">
                                         <rect key="frame" x="0.0" y="130.5" width="375" height="130"/>
@@ -51,14 +54,22 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Gz-d0-vnU" userLabel="Play">
-                                        <rect key="frame" x="32.5" y="260.5" width="310" height="256"/>
+                                        <rect key="frame" x="59.5" y="260.5" width="256" height="256"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="256" id="br5-pS-Tfc"/>
+                                            <constraint firstAttribute="height" constant="256" id="z4o-Q1-7jg"/>
+                                        </constraints>
                                         <state key="normal" title="Button" image="Play.png"/>
                                         <connections>
                                             <segue destination="tRj-px-kUi" kind="presentation" id="pmb-uc-OGU"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jpp-CZ-guW" userLabel="Rules">
-                                        <rect key="frame" x="92.5" y="516.5" width="190" height="130.5"/>
+                                        <rect key="frame" x="122.5" y="516.5" width="130.5" height="130.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="130.5" id="B12-I7-BSa"/>
+                                            <constraint firstAttribute="height" constant="130.5" id="Y9K-VJ-9vu"/>
+                                        </constraints>
                                         <state key="normal" title="Button" image="Rules.png"/>
                                         <connections>
                                             <segue destination="PO3-WS-dWH" kind="presentation" id="Yrl-FT-SAA"/>
@@ -96,9 +107,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vcq-Ud-o25">
-                                <rect key="frame" x="341" y="632" width="34" height="33"/>
+                                <rect key="frame" x="330" y="632" width="45" height="33"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="34" id="Hpj-7C-QI3"/>
+                                    <constraint firstAttribute="width" constant="45" id="Hpj-7C-QI3"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <state key="normal" title="Back"/>
@@ -107,7 +118,7 @@
                                 </connections>
                             </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" apportionsSegmentWidthsByContent="YES" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="cPA-aF-Z0f">
-                                <rect key="frame" x="2" y="637" width="337" height="29"/>
+                                <rect key="frame" x="2" y="637" width="326" height="29"/>
                                 <segments>
                                     <segment title="Beginner"/>
                                     <segment title="Easy"/>
@@ -134,20 +145,59 @@
                                     <constraint firstAttribute="width" secondItem="cDy-Kc-CPb" secondAttribute="height" multiplier="1:1" id="83y-bm-ToZ"/>
                                 </constraints>
                             </imageView>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-110" maxValue="110" translatesAutoresizingMaskIntoConstraints="NO" id="uvv-DD-Nln">
+                                <rect key="frame" x="48" y="607" width="319" height="31"/>
+                                <connections>
+                                    <action selector="incrementAction:" destination="tRj-px-kUi" eventType="valueChanged" id="CL8-KL-dxz"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K5E-pQ-xaQ">
+                                <rect key="frame" x="0.0" y="612" width="40" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="YXe-Zh-xBj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WkH-Ey-Wpf">
+                                <rect key="frame" x="0.0" y="576.5" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-110" maxValue="110" translatesAutoresizingMaskIntoConstraints="NO" id="FVv-TG-zzO">
+                                <rect key="frame" x="50" y="572" width="327" height="31"/>
+                                <connections>
+                                    <action selector="incrementYAction:" destination="tRj-px-kUi" eventType="valueChanged" id="1E3-Zo-CfI"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="FVv-TG-zzO" firstAttribute="centerY" secondItem="WkH-Ey-Wpf" secondAttribute="centerY" id="0Kf-yN-YrA"/>
+                            <constraint firstItem="cPA-aF-Z0f" firstAttribute="top" secondItem="uvv-DD-Nln" secondAttribute="bottom" id="5SV-9n-FCh"/>
+                            <constraint firstItem="K5E-pQ-xaQ" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="68Q-Jz-5NC"/>
+                            <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="FVv-TG-zzO" secondAttribute="trailing" id="9s6-oy-lLn"/>
+                            <constraint firstItem="uvv-DD-Nln" firstAttribute="leading" secondItem="K5E-pQ-xaQ" secondAttribute="trailing" constant="10" id="9xs-V6-IPG"/>
                             <constraint firstItem="vcq-Ud-o25" firstAttribute="leading" secondItem="cPA-aF-Z0f" secondAttribute="trailing" constant="2" id="ERK-5w-d4v"/>
                             <constraint firstAttribute="bottom" secondItem="vcq-Ud-o25" secondAttribute="bottom" constant="2" id="HDJ-IR-wE9"/>
                             <constraint firstItem="cPA-aF-Z0f" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" constant="2" id="Nac-2F-ngE"/>
                             <constraint firstItem="cDy-Kc-CPb" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" constant="10" id="QbN-kI-6TK"/>
+                            <constraint firstItem="FVv-TG-zzO" firstAttribute="leading" secondItem="WkH-Ey-Wpf" secondAttribute="trailing" constant="10" id="SHp-Tu-hAm"/>
                             <constraint firstItem="aES-Tv-mrC" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="Sdu-w3-gPE"/>
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="cDy-Kc-CPb" secondAttribute="trailing" constant="10" id="UjC-5u-O8l"/>
+                            <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="uvv-DD-Nln" secondAttribute="trailing" constant="10" id="VMw-82-E2J"/>
+                            <constraint firstItem="K5E-pQ-xaQ" firstAttribute="centerY" secondItem="uvv-DD-Nln" secondAttribute="centerY" id="XUT-vO-poN"/>
+                            <constraint firstItem="uvv-DD-Nln" firstAttribute="top" secondItem="FVv-TG-zzO" secondAttribute="bottom" constant="5" id="aZM-3K-G8A"/>
                             <constraint firstAttribute="trailing" secondItem="vcq-Ud-o25" secondAttribute="trailing" id="daA-q4-r0E"/>
                             <constraint firstItem="aES-Tv-mrC" firstAttribute="top" secondItem="Qle-fQ-JiD" secondAttribute="top" id="kj9-Q5-GBr"/>
+                            <constraint firstItem="uvv-DD-Nln" firstAttribute="leading" secondItem="K5E-pQ-xaQ" secondAttribute="trailing" constant="10" id="lOx-2t-tPW"/>
+                            <constraint firstItem="cPA-aF-Z0f" firstAttribute="top" secondItem="uvv-DD-Nln" secondAttribute="bottom" id="nIs-fz-MFa"/>
                             <constraint firstItem="cDy-Kc-CPb" firstAttribute="top" secondItem="aES-Tv-mrC" secondAttribute="bottom" constant="10" id="nvX-sv-ksT"/>
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="aES-Tv-mrC" secondAttribute="trailing" id="rcd-Qm-VCs"/>
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="bottom" secondItem="cPA-aF-Z0f" secondAttribute="bottom" constant="2" id="rgS-2h-YSQ"/>
+                            <constraint firstItem="WkH-Ey-Wpf" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="sQh-f8-iAV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Qle-fQ-JiD"/>
                     </view>
@@ -155,6 +205,10 @@
                         <outlet property="difficultySegment" destination="cPA-aF-Z0f" id="gBa-Qz-OZg"/>
                         <outlet property="imageView" destination="cDy-Kc-CPb" id="H3x-eJ-cXc"/>
                         <outlet property="labelCurrentLevel" destination="aES-Tv-mrC" id="3jx-4A-U4e"/>
+                        <outlet property="labelIncrement" destination="K5E-pQ-xaQ" id="KxI-F1-GnR"/>
+                        <outlet property="labelYIncrement" destination="WkH-Ey-Wpf" id="BcU-bJ-o6i"/>
+                        <outlet property="sliderIncrement" destination="uvv-DD-Nln" id="htE-yz-3hq"/>
+                        <outlet property="sliderYIncrement" destination="FVv-TG-zzO" id="gCL-0B-IfM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sTG-Oo-glM" userLabel="First Responder" sceneMemberID="firstResponder"/>
