--- a/IOS/Pentatonic/Base.lproj/Main.storyboard
+++ b/IOS/Pentatonic/Base.lproj/Main.storyboard
@@ -106,6 +106,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ban-Wr-skJ">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vcq-Ud-o25">
                                 <rect key="frame" x="330" y="632" width="45" height="33"/>
                                 <constraints>
@@ -176,6 +179,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="FVv-TG-zzO" firstAttribute="centerY" secondItem="WkH-Ey-Wpf" secondAttribute="centerY" id="0Kf-yN-YrA"/>
+                            <constraint firstItem="Qle-fQ-JiD" firstAttribute="bottom" secondItem="Ban-Wr-skJ" secondAttribute="bottom" id="1tr-20-ega"/>
+                            <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="Ban-Wr-skJ" secondAttribute="trailing" id="26R-5g-dRB"/>
                             <constraint firstItem="cPA-aF-Z0f" firstAttribute="top" secondItem="uvv-DD-Nln" secondAttribute="bottom" id="5SV-9n-FCh"/>
                             <constraint firstItem="K5E-pQ-xaQ" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="68Q-Jz-5NC"/>
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="FVv-TG-zzO" secondAttribute="trailing" id="9s6-oy-lLn"/>
@@ -191,6 +196,7 @@
                             <constraint firstItem="K5E-pQ-xaQ" firstAttribute="centerY" secondItem="uvv-DD-Nln" secondAttribute="centerY" id="XUT-vO-poN"/>
                             <constraint firstItem="uvv-DD-Nln" firstAttribute="top" secondItem="FVv-TG-zzO" secondAttribute="bottom" constant="5" id="aZM-3K-G8A"/>
                             <constraint firstAttribute="trailing" secondItem="vcq-Ud-o25" secondAttribute="trailing" id="daA-q4-r0E"/>
+                            <constraint firstItem="Ban-Wr-skJ" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="gss-pb-08e"/>
                             <constraint firstItem="aES-Tv-mrC" firstAttribute="top" secondItem="Qle-fQ-JiD" secondAttribute="top" id="kj9-Q5-GBr"/>
                             <constraint firstItem="uvv-DD-Nln" firstAttribute="leading" secondItem="K5E-pQ-xaQ" secondAttribute="trailing" constant="10" id="lOx-2t-tPW"/>
                             <constraint firstItem="cPA-aF-Z0f" firstAttribute="top" secondItem="uvv-DD-Nln" secondAttribute="bottom" id="nIs-fz-MFa"/>
@@ -198,10 +204,12 @@
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="trailing" secondItem="aES-Tv-mrC" secondAttribute="trailing" id="rcd-Qm-VCs"/>
                             <constraint firstItem="Qle-fQ-JiD" firstAttribute="bottom" secondItem="cPA-aF-Z0f" secondAttribute="bottom" constant="2" id="rgS-2h-YSQ"/>
                             <constraint firstItem="WkH-Ey-Wpf" firstAttribute="leading" secondItem="Qle-fQ-JiD" secondAttribute="leading" id="sQh-f8-iAV"/>
+                            <constraint firstItem="Ban-Wr-skJ" firstAttribute="top" secondItem="Qle-fQ-JiD" secondAttribute="top" id="tJg-nH-Hyc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Qle-fQ-JiD"/>
                     </view>
                     <connections>
+                        <outlet property="backgroundImage" destination="Ban-Wr-skJ" id="KrO-pW-n6O"/>
                         <outlet property="difficultySegment" destination="cPA-aF-Z0f" id="gBa-Qz-OZg"/>
                         <outlet property="imageView" destination="cDy-Kc-CPb" id="H3x-eJ-cXc"/>
                         <outlet property="labelCurrentLevel" destination="aES-Tv-mrC" id="3jx-4A-U4e"/>
@@ -354,14 +362,49 @@
                                     <action selector="backAction:" destination="qBf-CZ-QP3" eventType="touchUpInside" id="lun-xP-qoB"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j1O-vv-cbq">
+                                <rect key="frame" x="-92" y="120" width="574" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="j1O-vv-cbq" secondAttribute="height" multiplier="1:1" id="Hag-uJ-lBi"/>
+                                    <constraint firstAttribute="height" constant="50" id="uRo-mJ-BOZ"/>
+                                    <constraint firstAttribute="width" constant="50" id="zxb-Kq-cwj"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="rect_jaune.png"/>
+                                <connections>
+                                    <action selector="testActionPrimary:forEvent:" destination="qBf-CZ-QP3" eventType="primaryActionTriggered" id="vu5-as-BUj"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IGW-Ki-8tM">
+                                <rect key="frame" x="0.0" y="70" width="375" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rO5-J4-AeR">
+                                <rect key="frame" x="20" y="248" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="NXU-dP-WGD"/>
+                                    <constraint firstAttribute="width" constant="70" id="jNf-CZ-Vaq"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="xlI-mh-Np2" firstAttribute="trailing" secondItem="IGW-Ki-8tM" secondAttribute="trailing" id="7L7-4s-fgC"/>
                             <constraint firstItem="xlI-mh-Np2" firstAttribute="bottom" secondItem="JeM-fQ-56K" secondAttribute="bottom" constant="20" id="7Rj-sj-Z9Q"/>
+                            <constraint firstItem="rO5-J4-AeR" firstAttribute="leading" secondItem="xlI-mh-Np2" secondAttribute="leading" constant="20" id="P25-Q3-nCf"/>
                             <constraint firstItem="xlI-mh-Np2" firstAttribute="trailing" secondItem="JeM-fQ-56K" secondAttribute="trailing" constant="16" id="doM-DG-DLT"/>
+                            <constraint firstItem="IGW-Ki-8tM" firstAttribute="top" secondItem="xlI-mh-Np2" secondAttribute="top" constant="50" id="kDn-uo-kwD"/>
+                            <constraint firstItem="j1O-vv-cbq" firstAttribute="top" secondItem="xlI-mh-Np2" secondAttribute="top" constant="100" id="thx-kt-Tfo"/>
+                            <constraint firstItem="IGW-Ki-8tM" firstAttribute="leading" secondItem="xlI-mh-Np2" secondAttribute="leading" id="vYP-aF-dIw"/>
+                            <constraint firstItem="rO5-J4-AeR" firstAttribute="top" secondItem="j1O-vv-cbq" secondAttribute="bottom" constant="78" id="ydG-ba-DcU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="xlI-mh-Np2"/>
                     </view>
+                    <connections>
+                        <outlet property="labelTuto" destination="IGW-Ki-8tM" id="juT-U0-5nm"/>
+                        <outlet property="myImageView" destination="rO5-J4-AeR" id="8Y9-Ic-Ykr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ke6-v1-bZp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -372,6 +415,8 @@
         <image name="Play.png" width="256" height="256"/>
         <image name="Rules.png" width="136" height="125"/>
         <image name="Tutorial.png" width="550" height="250"/>
+        <image name="background.png" width="183" height="275"/>
+        <image name="rect_jaune.png" width="520" height="527"/>
         <image name="setting.png" width="482" height="485"/>
     </resources>
 </document>
